--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,22 @@
 <!-- Put your HTML HERE, make sure to connect your style.css sheet -->
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header> </header>
+
+    <div class="content">
+
+    </div>
+
+    <footer> </footer>
+
+
+
+  </body>
+</html>
